[package]
name = "Forrest-Gump-Discord-Bot"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = { version = "0.3.31", features = ["sink"] }  # only sink needed
once_cell = "1.21.3"
tokio-rustls = "0.26"
rustls-native-certs = "0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["__rustls-tls"] }
url = "2.5.7"
rand = "0.9.2"
